just some comments

--- a/coords_to_meters.ipynb
+++ b/coords_to_meters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,15 +11,17 @@
        "5.673389197363626"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# get the distance in meters of two locations with gps coordinates \n",
+    "\n",
     "import numpy as np\n",
     "\n",
-    "def measure(lat1, lon1, lat2, lon2):  \n",
+    "def coords_to_meters(lat1, lon1, lat2, lon2):  \n",
     "    \n",
     "    #https://en.wikipedia.org/wiki/Haversine_formula\n",
     "    \n",
@@ -33,9 +35,14 @@
     "    \n",
     "    return d * 1000; # meters\n",
     "\n",
+    "#\n",
+    "#              PUT THE CORDINATES BELOW\n",
+    "#                          |   \n",
+    "#                          |\n",
+    "#                         \\/\n",
     "\n",
-    "measure( -121.05595297079958, 37.559322620205485,\n",
-    "         -121.0559020088283, 37.5593215570816 )\n"
+    "coords_to_meters( -121.05595297079958, 37.559322620205485,\n",
+    "                  -121.0559020088283, 37.5593215570816 )\n"
    ]
   }
  ],
