--- a/coords_to_meters.ipynb
+++ b/coords_to_meters.ipynb
@@ -36,7 +36,7 @@
     "    return d * 1000; # meters\n",
     "\n",
     "#\n",
-    "#              PUT THE CORDINATES BELOW\n",
+    "#            PUT THE CORDINATES BELOW, HIT CTRL + ENTER \n",
     "#                          |   \n",
     "#                          |\n",
     "#                         \\/\n",
