--- a/coords_to_meters.ipynb
+++ b/coords_to_meters.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5.673389197363626"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The distance between these two points is\n",
+      "8.683767966173107 meters.\n"
+     ]
     }
    ],
    "source": [
@@ -21,11 +19,19 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "def coords_to_meters(lat1, lon1, lat2, lon2):  \n",
+    "def coords_to_meters(coord_dict):  \n",
+    "    \n",
+    "    lat1=coord_dict[0][1]\n",
+    "    lon1=coord_dict[0][0]\n",
+    "    lat2=coord_dict[1][1]\n",
+    "    lon2=coord_dict[1][0]\n",
+    "    \n",
     "    \n",
     "    #https://en.wikipedia.org/wiki/Haversine_formula\n",
     "    \n",
     "    R = 6378.137 # Radius of earth in KM\n",
+    "    #dLat = np.abs( lat2 * np.pi / 180 - lat1 * np.pi / 180 )\n",
+    "    #dLon = np.abs( lon2 * np.pi / 180 - lon1 * np.pi / 180 )\n",
     "    dLat = np.abs( lat2 * np.pi / 180 - lat1 * np.pi / 180 )\n",
     "    dLon = np.abs( lon2 * np.pi / 180 - lon1 * np.pi / 180 )\n",
     "    a = np.sin(dLat/2) **2 + \\\n",
@@ -33,16 +39,24 @@
     "          np.sin(dLon/2) **2\n",
     "    d = 2 * R * np.arcsin( np.sqrt(a) )\n",
     "    \n",
-    "    return d * 1000; # meters\n",
+    "    print(\"The distance between these two points is\")\n",
+    "    print(d*1000, \"meters.\")\n",
     "\n",
     "#\n",
-    "#            PUT THE CORDINATES BELOW, HIT CTRL + ENTER \n",
+    "#   COPY-PASTE FROM GOOGLE EARTH ENGINE, PUT A COMMA IN THE BEGINNING OF THE LINE BEGIINING WITH 1\n",
     "#                          |   \n",
     "#                          |\n",
     "#                         \\/\n",
     "\n",
-    "coords_to_meters( -121.05595297079958, 37.559322620205485,\n",
-    "                  -121.0559020088283, 37.5593215570816 )\n"
+    "coords_to_meters( coord_dict={\n",
+    "\n",
+    " 0: [-121.056817609787,37.55918222664327]\n",
+    ",1: [-121.05684711408617,37.55925664541774]\n",
+    "\n",
+    "}\n",
+    ")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -62,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   },
   "varInspector": {
    "cols": {
@@ -91,7 +105,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": false
+   "window_display": true
   }
  },
  "nbformat": 4,
