--- a/GDD__2019-02-15__github.ipynb
+++ b/GDD__2019-02-15__github.ipynb
@@ -60,8 +60,7 @@
     }
    ],
    "source": [
-    "### modify data, possibly full_bloom, and hit CTRL & Enter\n",
-    "\n",
+    "### modify data, and possibly full_bloom, and hit CTRL & Enter\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas\n",
@@ -632,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   },
   "varInspector": {
    "cols": {
